--- a/index.css
+++ b/index.css
@@ -1,4 +1,12 @@
-body {
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form {
+    margin: 0;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
